Update with /etc/environment and cli setup

--- a/files/envvars.ini
+++ b/files/envvars.ini
@@ -1,4 +1,5 @@
 ; This file should be symlinked to /etc/php/7.4/apache2/conf.d/99-envvars.ini
+; and /etc/7.4/cli/conf.d/99-envvars.ini.
 ; It adds "E" to variables_order so that the LocalSettings.php can use
-; what is in /etc/apache2/envvars
+; what is in /etc/environment
 variables_order = "EGPCS"
